k8s/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counter-database
  template:
    metadata:
      labels:
        app: counter-database
    spec:
      containers:
        - name: counter-database
          image: registry.redhat.io/rhel8/postgresql-15:latest
          ports:
            - containerPort: 5432
              protocol: TCP
