k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counter-frontend
  labels:
    app: counter-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counter-frontend
  template:
    metadata:
    labels:
      app: counter-frontend
    spec:
      containers:
        - name: counter-frontend
          image: ghcr.io/ebholi/counter-frontend:v1
