k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-backend
spec:
  selector:
    app: counter-backend
  ports:
    - port: 80
      targetPort: 3000
