k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-frontend
spec:
  selector:
    app: counter-frontend
  ports:
    - port: 80
      targetPort: 3000
